<resources>
    <string name="app_name">Grupos Camino de Santiago</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_title">Grupos\nCamino de Santiago</string>
    <string name="menu_groups">Grupos</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="login">Acceder</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="already_have_account">¿Ya tienes cuenta?</string>
    <string name="create_account">Crear cuenta</string>
    <string name="select_avatar">Seleccionar avatar</string>
    <string name="name">Nombre</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="required_field">"Campo requerido"</string>
    <string name="user_or_pass_not_valid">Usuario o contraseña incorrectos</string>
    <string name="internet_error">Se ha producido un error de conexión</string>
    <string name="logout">Cerrar sesión</string>
    <string name="logout_confirmation">¿Seguro que desea cerrar sesión?</string>
    <string name="no_items_to_show">No hay grupos que mostrar</string>
    <string name="no_items_to_show_advice">Revise en los ajustes los grupos visibles</string>
    <string name="preferences_visible_groups_title">Grupos visibles</string>
    <string name="preferences_groups_created">Grupos que he creado</string>
    <string name="preferences_groups_member">Grupos de los que soy miembro</string>
    <string name="preferences_other_groups">Otros grupos</string>
    <string name="create_group">Crear grupo</string>
    <string name="title_activity_group_detail">GroupDetailActivity</string>
    <string name="detail">Detalle</string>
    <string name="members">Miembros</string>
    <string name="chat">Chat</string>
    <string name="group_departure_date">Salida</string>
    <string name="group_arrival_Date">Llegada</string>
    <string name="group_description_title">Descripción</string>
    <string name="group_departure_place">Lugar de salida</string>
    <string name="title_activity_maps">Map</string>
    <string name="group_admin">Organizador</string>
    <string name="add_member_to_group">Unirse al grupo</string>
    <string name="leave_group">Salir del grupo</string>
    <string name="admin">Administrador</string>
    <string name="member">Miembro</string>
    <string name="passwords_not_match">Las contraseñas no coinciden</string>
    <string name="title">Título</string>
    <string name="departure_place">Lugar de salida</string>
    <string name="select_group_image">Seleccionar imagen de grupo</string>
    <string name="departure_coordinates">Coordenadas</string>
    <string name="departure_zone">Punto de salida</string>
    <string name="add_location">Añadir localización</string>
    <string name="email_not_valid">Ya existe un usuario con ese email</string>
    <string name="accept">Aceptar</string>
    <string name="delete_group_comfirmation">¿Seguro que desea eliminar este grupo?</string>
    <string name="delete_group">Eliminar grupo</string>
    <string name="date_conditions">La fecha de llegada debe de ser posterior a la de salida</string>
    <string name="click_to_map">Haga click sobre el mapa para añadir el lugar de partida</string>

</resources>
