<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.fragment.RegisterFragment">

    <ImageView
            android:src="@drawable/img_login"
            android:scaleType="centerCrop"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/imageView2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <View android:background="@drawable/bg_gradient"
          android:layout_width="0dp"
          android:layout_height="0dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          android:id="@+id/view"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintVertical_bias="0.0"/>

    <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                                           android:layout_height="match_parent"
                                           app:layout_constraintTop_toTopOf="parent"
                                           app:layout_constraintStart_toStartOf="@+id/view"
                                           app:layout_constraintEnd_toEndOf="@+id/view"
                                           app:layout_constraintBottom_toBottomOf="@+id/view">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:paddingBottom="40dp"
                android:layout_height="500dp">

            <TextView
                    style="@style/TitleFullScreenPage"
                    android:text="@string/app_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="64dp"
                    app:layout_constraintTop_toTopOf="parent"/>


            <de.hdodenhof.circleimageview.CircleImageView
                    android:src="@drawable/ic_avatar"
                    android:layout_width="75dp"
                    android:layout_height="@dimen/avatar_size"
                    android:id="@+id/iv_avatar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"/>


            <Button
                    android:textColor="@android:color/white"
                    android:minHeight="32dp"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_avatar"
                    android:id="@+id/bt_select_avatar"
                    style="@style/CustomButtonSecundary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/iv_avatar"/>


            <EditText
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    style="@style/CustomEditText"
                    android:drawableStart="@drawable/ic_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/et_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/bt_select_avatar"/>


            <EditText
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    style="@style/CustomEditText"
                    android:drawableStart="@drawable/ic_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/et_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_name"/>


            <EditText
                    android:layout_width="wrap_content"
                    android:imeOptions="actionNext"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    style="@style/CustomEditText"
                    android:id="@+id/et_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_email"/>


            <EditText
                    android:layout_width="wrap_content"
                    android:imeOptions="actionDone"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    style="@style/CustomEditText"
                    android:id="@+id/et__confirm_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_password"/>


            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:text="@string/create_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button"
                    android:id="@+id/bt_create_account"
                    style="@style/CustomButton"
                    app:layout_constraintEnd_toEndOf="@+id/et__confirm_password"
                    app:layout_constraintStart_toStartOf="@+id/et__confirm_password"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/et__confirm_password"/>


            <TextView
                    android:text="@string/already_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:id="@+id/tv_go_to_login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/bt_create_account"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>