<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragment.AddGroupFragment">

    <include layout="@layout/bg_view" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/ag_padding_top">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_group_image"
                android:layout_width="@dimen/group_image_size"
                android:layout_height="@dimen/group_image_size"
                android:layout_marginTop="@dimen/ag_iv_margin"
                android:scaleType="centerCrop"
                android:src="@drawable/img_default"
                app:civ_border_color="@color/white"
                app:civ_border_width="@dimen/ag_iv_border_width"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/bt_select_group_image"
                style="@style/CustomButtonSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ag_bt_image_margin"
                android:minHeight="@dimen/ag_bt_image_min_height"
                android:text="@string/select_group_image"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ag_bt_image_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_group_image" />


            <EditText
                android:id="@+id/et_group_title"
                style="@style/CustomEditText"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ag_et_title_margin_top"
                android:drawableStart="@drawable/ic_members"
                android:hint="@string/title"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_select_group_image"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/et_group_description"
                style="@style/CustomEditText"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ag_et_des_margin_top"
                android:gravity="top"
                android:hint="@string/group_description_title"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="3"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_group_title"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/et_departure_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ag_tv_departure_date_margin_top"
                android:drawableStart="@drawable/ic_date"
                android:drawablePadding="@dimen/ag_tv_departure_date_padding"
                android:gravity="center_vertical"
                android:text="@string/group_departure_date"
                android:textColor="@color/grey_2"
                android:textSize="@dimen/ag_tv_departure_date_text_size"
                app:layout_constraintStart_toStartOf="@+id/et_group_description"
                app:layout_constraintTop_toBottomOf="@+id/et_group_description" />

            <EditText
                android:id="@+id/et_departure_date_value"
                style="@style/CustomEditText"
                android:layout_width="@dimen/ag_et_departure_date_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ag_et_departure_date_margin_start"
                android:focusable="false"
                android:gravity="end"
                android:textSize="@dimen/ag_et_departure_date_text_size"
                app:layout_constraintBaseline_toBaselineOf="@+id/et_departure_date"
                app:layout_constraintEnd_toEndOf="@+id/et_group_description"
                app:layout_constraintStart_toEndOf="@+id/et_arrival_date"
                tools:hint="12:23 10/12/19" />


            <TextView
                android:id="@+id/et_arrival_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ag_tv_arrival_date_margin_top"
                android:drawableStart="@drawable/ic_date"
                android:drawablePadding="@dimen/ag_tv_arrival_date_padding"
                android:gravity="center_vertical"
                android:text="@string/group_arrival_Date"
                android:textColor="@color/grey_2"
                android:textSize="@dimen/ag_tv_arrival_date_text_size"
                app:layout_constraintStart_toStartOf="@+id/et_departure_date"
                app:layout_constraintTop_toBottomOf="@+id/et_departure_date" />

            <EditText
                android:id="@+id/et_arrival_date_value"
                style="@style/CustomEditText"
                android:layout_width="@dimen/ag_et_arrival_date_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ag_et_arrival_date_margin_start"
                android:focusable="false"
                android:gravity="end"
                android:textSize="@dimen/ag_et_arrival_date_text_size"
                app:layout_constraintBaseline_toBaselineOf="@+id/et_arrival_date"
                app:layout_constraintEnd_toEndOf="@+id/et_departure_date_value"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/et_arrival_date"
                tools:hint="12:23 10/12/19" />


            <EditText
                android:id="@+id/et_departure_place"
                style="@style/CustomEditText"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ag_et_departure_place_margin_top"
                android:drawableStart="@drawable/ic_location"
                android:gravity="top"
                android:hint="@string/group_departure_place"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_arrival_date_value"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/et_departure_coordinates"
                style="@style/CustomEditText"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ag_et_coordinates_margin_top"
                android:drawableStart="@drawable/ic_location"
                android:focusable="false"
                android:gravity="top"
                android:hint="@string/departure_coordinates"
                android:imeOptions="actionDone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_departure_place" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/bt_add_group"
                style="@style/CustomButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ag_bt_margin_top"
                android:text="@string/accept"
                app:initialCornerAngle="@dimen/ag_bt_corner"
                app:layout_constraintEnd_toEndOf="@+id/et_departure_coordinates"
                app:layout_constraintStart_toStartOf="@+id/et_departure_coordinates"
                app:layout_constraintTop_toBottomOf="@+id/et_departure_coordinates"
                app:spinning_bar_color="@color/colorPrimary"
                app:spinning_bar_padding="@dimen/ag_bt_spinner_padding" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>

